Fix code color in dark mode

--- a/assets/new.scss
+++ b/assets/new.scss
@@ -8,7 +8,7 @@ modes:
   dark:
     foreground: "#fdfdfd"
     background: "#1b1b1b"
-    link_foreground: "#fafff7"
+    link_foreground: "#ccf3de"
     mark_background: "#303030"
 ---
 
@@ -41,7 +41,7 @@ modes:
   }
 
   code, pre {
-    color: {{ page.modes.dark.background }}
+    color: {{ page.modes.dark.foreground }}
   }
 
   li:not(:last-child) .note {
